# creating-an-open-source-project-in-python-3085072

start/: .pre-commit-config.yaml  pyproject.toml  tests.py  tox.ini
